Update design, add ENV variables

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,13 @@
 
 # Ignore Byebug command history file.
 .byebug_history
+
+# Ignore environment variables (Shhh!)
+/config/environment_variables.yml
+
+# Ignore font & image assets
+/app/assets/images/*
+/app/assets/fonts/*
+
+# Ignore Rubocop's nitpicking
+/rubocop.txt
