--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@
 
 # Ignore environment variables (Shhh!)
 /config/environment_variables.yml
+/config/secrets.yml
 
 # Ignore Rubocop's nitpicking
 /rubocop.txt
